--- a/notebooks/requirements.txt
+++ b/notebooks/requirements.txt
@@ -148,6 +148,7 @@ typing_extensions @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000g
 tzdata @ file:///croot/python-tzdata_1690578112552/work
 unicodedata2 @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_1anajuo38r/croot/unicodedata2_1713212953928/work
 urllib3 @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_65yo38szpt/croot/urllib3_1718912647798/work
+utils==1.0.2
 wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
 webencodings==0.5.1
 websocket-client @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_8c3cjp8r36/croot/websocket-client_1715878317325/work
